--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="footer__wrapper">
                 <div class="footer__desc">
                     <h1>nonmle</h1>
-                    <p >Copyright © 2022,<br> nonmle
+                    <p >Copyright™ 2022,<br> nonmle
 
                     </p>
                 </div>
